third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/misuse.rs
use proc_macro_error2::abort;

struct Foo;

#[allow(unused)]
fn foo() {
    abort!(Foo, "BOOM");
}

fn main() {}
